<resources>
    <string name="app_name">Teams Score Counter Explicit</string>
    <string name="textview">TextView</string>
    <string name="_0">0</string>
    <string name="button">Button</string>
    <string name="aguilas">Aguilas</string>
    <string name="licey">LICEY</string>
    <string name="reset">RESET</string>
    <string name="winner">TextView</string>
    <string name="backMain">Button</string>
    <string name="todo">TODO</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
</resources>
