<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beisbol"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Aguilas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="top|center_horizontal"
        android:layout_row="4"
        android:hint="@string/_0"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Licey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="top|center_vertical|center_horizontal"
        android:layout_row="4"
        android:hint="@string/_0"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_AC"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:background="@android:color/holo_orange_light"
        android:text="@string/aguilas" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:onClick="play"
        android:text="@string/play" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="center"
        android:layout_row="5"
        android:onClick="pause"
        android:text="@string/pause" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="right"
        android:layout_row="5"
        android:onClick="stop"
        android:text="@string/stop" />

    <Button
        android:id="@+id/button_TL"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="0"
        android:background="#0b2c73"
        android:text="@string/licey"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="top"
        android:layout_row="4"
        android:text="@string/reset" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="115dp"
        android:layout_height="119dp"
        android:layout_column="0"
        android:layout_gravity="top|fill_horizontal"
        android:layout_row="2"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/aguilas" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="118dp"
        android:layout_height="116dp"
        android:layout_column="3"
        android:layout_row="2"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/liceyyy" />
</GridLayout>